Start of assignment 2 am not sure if my tag went through

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="model3_text">Model 3</string>
     <string name="models_text">Model S</string>
     <string name="modelx_text">Model X</string>
+    <string name="title_activity_nicer_menu">NicerMenuActivity</string>
 </resources>
